--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ p {
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 p:last-child {
@@ -35,4 +35,61 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.container {
+  max-width: 1680px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header-box {
+  display: flex;
+  align-items: center;
+  gap: 366px;
+}
+
+.header {
+  padding: 30px 0 20px 0;
+  background-color: rgba(222, 124, 59, 0.9);
+  border-bottom: 2px solid #FCFCFC;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-item {
+  font-size: 18px;
+  font-family: 'Bookman Old Style';
+}
+
+.header-nav {
+  display: flex;
+  gap: 25px;
+}
+
+.header-img {
+  width: 30px;
+  height: 30px;
+}
+
+.hero {
+  padding: 100px 0;
+  background-color: rgba(222, 124, 59, 0.9);
+}
+
+.hero-text {
+  color: #000;
+  font-family: "Bookman Old Style";
+  font-size: 90px;
+  font-weight: 600;
+}
+
+.hero-p {
+  color: var(--Font-Color-Black, #000);
+  font-family: "Bookman Old Style";
+  font-size: 50px;
+  font-weight: 300;
+  line-height: 130%;
+  width: 750px;
 }
