--- a/style.css
+++ b/style.css
@@ -83,13 +83,69 @@ img {
   font-family: "Bookman Old Style";
   font-size: 90px;
   font-weight: 600;
+  margin-bottom: 24px;
 }
 
 .hero-p {
-  color: var(--Font-Color-Black, #000);
+  color: #000;
   font-family: "Bookman Old Style";
   font-size: 50px;
   font-weight: 300;
   line-height: 130%;
   width: 750px;
+}
+
+.hero-list {
+  display: flex;
+  justify-content: center;
+}
+
+.hero-btn {
+  border-radius: 10px;
+  background: #FCFCFC;
+  padding: 15px 55px;
+  gap: 10px;
+  border: none;
+  font-size: 15px;
+  margin-top: 94px;
+}
+
+.hero-img {
+  width: 500px;
+  height: 600px;
+}
+
+.nas {
+  padding: 115px 0;
+}
+
+.nas-p {
+  color: #DF803E;
+  font-family: "Bookman Old Style";
+  font-size: 26px;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.nas-text {
+  color: #000;
+  text-align: center;
+  font-family: "Bookman Old Style";
+  font-size: 50px;
+  font-weight: 300;
+  line-height: 130%;
+}
+
+.nas-img {
+  width: 150px;
+  height: 150px;
+}
+
+.nas-texts {
+  color: var(--Font-Color-Black, #000);
+  text-align: center;
+  font-family: "Bookman Old Style";
+  font-size: 34px;
+  font-weight: 300;
+  line-height: 130%;
 }
